# M2NDP-public

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  get_ndp_energy_imdb.sh  make_and_run_script.py
config/functional_only/: m2ndp.config  m2ndp_CH4.config  m2ndp_dlrm.config
config/performance/M2NDP/: m2ndp.config  m2ndp_64B.config
config/performance/M2NDP_0.2/: cxl_link.icnt  m2ndp.config
config/performance/M2NDP_0.4/: m2ndp.config
config/performance/M2NDP_0.8/: m2ndp.config
config/performance/M2NDP_300/: cxl_link.icnt  m2ndp.config
config/performance/M2NDP_600/: cxl_link.icnt
config/performance/M2NDP_KV/: m2ndp.config
config/performance/M2NDP_sc_addr/: LPDDR5-config.cfg  m2ndp.config  memory_buffer_crossbar.icnt
energy/: gpu_enegy_calculate.py  ndp_energy_calculate.py  ndp_energy_config.yaml  ndp_energy_config_64B.yaml
examples/: configs.py  opt_runner.py  roofline.sh  runner.py
examples/benchmarks/dlrm/: __init__.py  dlrm_sls.py  dlrm_sls_opt.py  dlrm_sls_opt_unroll.py  emb_pytorch.py
examples/benchmarks/exponent/: __init__.py  float_exp.py  vector_exp.py
examples/benchmarks/gelu/: __init__.py  gelu.py
examples/benchmarks/gemv/: __init__.py  aggregation.py  gemv.py  gemvfp16.py  gemvfp16tofp32.py  gemvfp32.py
examples/benchmarks/histogram/: __init__.py  histogram.py  histogram_256.py
examples/benchmarks/imdb_gt_lt_FP32/: __init__.py  gt_lt_fp32.py
examples/benchmarks/imdb_gteq_lt_INT64/: __init__.py  gteq_lt_int64.py
examples/benchmarks/imdb_lt_INT64/: __init__.py  lt_int64.py
examples/benchmarks/imdb_three_col_AND/: __init__.py  three_col_AND.py
examples/benchmarks/imdb_two_col_AND/: __init__.py  two_col_AND.py
examples/benchmarks/kmeans/: __init__.py  kmeans_kernel0 copy.py  kmeans_kernel0.py  kmeans_kernel1.py  kmeans_total copy.py  kmeans_total.py
examples/benchmarks/layerNorm/: __init__.py  kernel0.py  kernel1.py
examples/benchmarks/layerNorm32/: __init__.py  kernel0.py  kernel1.py
examples/benchmarks/memcpy/: __init__.py  memcpy.py
examples/benchmarks/memset/: __init__.py  memset.py
examples/benchmarks/naive_bayes/: __init__.py  kernel0.py
examples/benchmarks/narrow_wide/: __init__.py  narrow.py  wide.py
examples/benchmarks/opt/: activation.py  allreduce.py  attention.py  fc.py  layernom.py  residual.py
examples/benchmarks/opt/configs/: opt-2.7b.json  opt-30b.json
examples/benchmarks/pagerank/: __init__.py  kernel0.py  kernel1.py  kernel2.py  kernel2_bak.py  kernel3.py
examples/benchmarks/softmax/: __init__.py  batch_kernel0.py  batch_kernel1.py  batch_kernel2.py  kernel0.py  kernel1.py  kernel2.py  multi_kernel0.py  new_batch_kernel0.py  new_batch_kernel1.py  new_batch_kernel2.py  single_kernel.py
examples/benchmarks/spmv/: __init__.py  csr_generator.py  kernel1.py
examples/benchmarks/sssp/: __init__.py  init.py  kernel0.py  kernel1.py
examples/benchmarks/vector_add/: __init__.py  vector_add.py  vector_add2.py
examples/cuda/SpMV/: tmp
examples/cuda/SpMV/baselines/gpu/: Makefile  app.cu  app_cusparse.cu  spmv
examples/cuda/SpMV/data/: matrixinfo.txt
examples/cuda/SpMV/data/generate/: replicate
examples/cuda/SpMV/support/: matrix.h
examples/cuda/dlrm/: embbag.cu
examples/cuda/pagerank/: Makefile  build_and_run.sh  kernel_spmv.cu  pagerank.cu  pagerank_spmv.cu
examples/cuda/pagerank/traces/: kernelslist  stats.csv
examples/cuda/sssp/: Makefile  build_and_run.sh  sssp_csr.cu
examples/data/kaggle_emb/: emb_0.txt  emb_0_uniform.txt  emb_1.txt  emb_2.txt  emb_3.txt  emb_4.txt  emb_5.txt  emb_6.txt  emb_7.txt  emb_8.txt  emb_9.txt
examples/utils/: utils.py
functional_runner/: main.cc
include/: latency_queue.h  m2ndp_module.h
outputs/: gpu_baseline.csv
perf_runner/: kv_runner.cc  kv_runner.h  main.cc  scalability_runner.cc  scalability_runner.h  simulation_runner.cc  simulation_runner.h  synthetic_traffic.cc  synthetic_traffic.h
scripts/: aggregate_gpu_results.py  aggregate_results.sh  build_accelsim.sh  build_functional.sh  build_timing.sh  build_timing_kvrun.sh  build_timing_scalability.sh  make_traces.sh  olap_graph.py  run_simulations.sh
src/: cache.cc  cache.h  cache_defs.h  cache_stats.cc  cache_stats.h  command_line_parser.cc  common.h  common_defs.h  cxl_link.cc  cxl_link.h  delay_queue.cc  delay_queue.h  delayqueue.h  execution_unit.cc  execution_unit.h  hashing.cc  hashing.h  instruction_buffer.cc  instruction_buffer.h  instruction_queue.cc  instruction_queue.h  ldst_unit.cc  ldst_unit.h  loop_parser.cc  loop_parser.h  m2ndp.cc  m2ndp.h  m2ndp_config.cc  m2ndp_config.h  m2ndp_module.cc  m2ndp_parser.cc  m2ndp_parser.h  mem_fetch.cc  mem_fetch.h  memory_map.cc  memory_map.h  ndp_instruction.cc  ndp_instruction.h  ndp_ramulator.cc  ndp_ramulator.h  (+14 more)
test/: CMakeLists.txt
test/src/: main.cc  ndp_instruction_test.cc
